[metadata]
name = notifsdk
version = 0.0.5
author = Pedram Dehghanpour
author_email = dev.dehghanpour@gmail.com
description = "Python HacTech Notification Service SDK"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pedramcode.net
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src